--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
+  "engines": {
+    "node": "16.16.0",
+    "npm": "8.17.0"
+  },
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.0.0",
@@ -26,8 +30,8 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^16.0.6",
-    "@angular/cli": "^15.0.3",
+    "@angular-devkit/build-angular": "^16.1.0",
+    "@angular/cli": "^16.1.0",
     "@angular/compiler-cli": "^16.0.0",
     "@types/jasmine": "~4.3.0",
     "autoprefixer": "^10.4.14",
